# GPU_Kmeans

./: .gitignore  .gitmodules  3Dpoints.csv  CMakeLists.txt  README.md  data_generator.py  makefile  run.sh  runComparison.sh  scatter_plot.py
comparisons/: GPU_python.py
comparisons/CPU_Kmeans/: makefile
comparisons/CPU_Kmeans/include/: input_parser.hpp  kmeans.h  point.hpp
comparisons/CPU_Kmeans/src/: kmeans.cpp  main.cpp
comparisons/CPU_python/: requirements.txt  sklearn_Kmeans.py  sklearn_kmeans.py
comparisons/GPU_CUDA/: kmcuda.cpp  makefile
comparisons/GPU_python/: pytorch_Kmeans.py
comparisons/test-outputs/: N1000_D10_K4.out  N1000_D256_K4.out  N1000_D2_K4.out  N1000_D35_K4.out  N1000_D3_K4.out  N100K_D10_K4.out  N100K_D256_K4.out  N100K_D2_K4.out  N100K_D35_K4.out  N100K_D3_K4.out  N100_D10_K4.out  N100_D256_K4.out  N100_D2_K4.out  N100_D35_K4.out  N100_D3_K4.out  N10K_D10_K4.out  N10K_D256_K4.out  N10K_D2_K4.out  N10K_D35_K4.out  N10K_D3_K4.out
comparisons/test-outputs/CPU_kmeans/: K_4.out  K_N\10.out
comparisons/test-outputs/CPU_python/: K_4.out  K_N\10.out
comparisons/test-outputs/GPU_CUDA/: K_4.out  K_N\10.out
comparisons/test-outputs/GPU_kmeans/: K_4.out  K_N\10.out
datasets/: 12D.csv  N1000_D10_small.csv  N1000_D3.csv  N1000_D50.csv  N3000_D2_big.csv
datasets/usable/: N100K_D2_float.csv  N1797_D64_digits-sklearn.csv
include/: common.h  cxxopts.hpp  errors.hpp  input_parser.hpp  point.hpp
lib/cuda/: kmeans.cu  kmeans.cuh  kmeans.h  utils.cuh
nsight_profiling/GPU_Kmeans/: GPU_Kmeans.ncu-proj  dist_matrix_n1000_k10_d3.nsys-rep  dist_shuffle_n100k_k200_d2.nsys-rep
py_utils/: data_generator.py  requirements.txt  scatter_plot.py
scratch/: kernel_argmin.cu
scripts/: 2remote.sh  build.sh  build_and_run_tests.sh  example.sh  job.sh  run_tests.sh
src/: CMakeLists.txt  cuda_utils.cu  cuda_utils.cuh  kmeans.cu  kmeans.cuh  kmeans.h  main.cpp  main.cu  utils.cu  utils.cuh
src/include/: common.h  errors.hpp  input_parser.hpp  utils.hpp
src/kernels/: argmin.cu  argmin.cuh  centroids.cu  distances.cu  distances.cuh  kernels.cuh
tests/: CMakeLists.txt  unit_kernels.cpp  unit_kernels.cu
(+2 files in other folders)
